[project]
name = "gfc-redirect"
version = "0.1.0"
description = "Google Cloud Function for URL redirect with PII masking"
requires-python = ">=3.12"
dependencies = [
    "functions-framework>=3.0",
    "flask>=2.0",
    "gspread>=6.0",
    "google-auth>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
